Fix event title overlap

--- a/src/sass/_banner.sass
+++ b/src/sass/_banner.sass
@@ -47,3 +47,6 @@
   font-size: calc(18px + 5vw)
   text-transform: uppercase
   text-shadow: 1px 1px 0 #fff
+
+  &.event-title
+    max-width: calc(100% - 256px)
