--- a/src/sass/_media-queries.sass
+++ b/src/sass/_media-queries.sass
@@ -59,6 +59,9 @@
     font-size: 30px
     font-size: calc(2*16px + 2vw)
 
+    &.event-title
+      max-width: 100%
+
   // from _event-page
   .event-page
     > div
